tests/snapshots/test_runner__tests__compiler__transpile__let_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
type Null = #null
entry
  let foo = { #null -> 123 };
  let xs = (
    let x = #null foo;
    let y = (x = #null foo).x;
    [x, y]
  );
  xs print

============
EXIT CODE
============
0

============
STDOUT
============
[ 123, 123 ]

============
STDERR
============
