tests/snapshots/test_runner__tests__compiler__transpile__or_pattern_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
// Subpatterns
type Boolean = #true | #false

let isVowel
  : Character -> Boolean = {
    'a' | 'e' | 'i' | 'o' | 'u'  -> #true,
    _ -> #false
  }

entry
  'a' isVowel print;
  'e' isVowel print;
  'i' isVowel print;
  'o' isVowel print;
  'u' isVowel print;

  'b' isVowel print;
  'z' isVowel print

============
EXIT CODE
============
0

============
STDOUT
============
{ '$': '#true', _: null }
{ '$': '#true', _: null }
{ '$': '#true', _: null }
{ '$': '#true', _: null }
{ '$': '#true', _: null }
{ '$': '#false', _: null }
{ '$': '#false', _: null }

============
STDERR
============
