tests/snapshots/test_runner__tests__compiler__transpile__or_pattern_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
// Nested pattern
type Vehicle = #car(Color) | #motor

type Color = #white | #gold | #black

type Boolean = case true case false

let `is shiny car`: Vehicle -> Boolean = {
  #car(#white | #gold) -> true,
   _ -> false
}

entry
  #white #car `is shiny car` print;
  #gold #car `is shiny car` print;
  #black #car `is shiny car` print;
  #motor `is shiny car` print

============
EXIT CODE
============
0

============
STDOUT
============
{ '$': 'true', _: null }
{ '$': 'true', _: null }
{ '$': 'false', _: null }
{ '$': 'false', _: null }

============
STDERR
============
