tests/snapshots/test_runner__tests__compiler__transpile__or_pattern_homogenous_bindings_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
type Foo
  = #a (x: String, y: String)
  | #b (a: String, b: String)

let toString
  : Foo -> String
  = {
    // More tha one binding per pattern
    #a (x, y) | #b (a = x, b = y) -> "${x} - ${y}"
  }

entry
  #a (x = "Spongebob", y = "Squarepants") toString print;
  #b (a = "Squiward", b = "Patrick") toString print

============
EXIT CODE
============
0

============
STDOUT
============
Spongebob - Squarepants
Squiward - Patrick

============
STDERR
============
