tests/snapshots/test_runner__tests__compiler__transpile__or_pattern_homogenous_bindings_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
enum Foo = #a(String) | #b {hello: String}

let toString
  : Foo -> String
  = { #a(x) | #b {.hello = x} -> x }

entry
  #a(`Spongebob`) toString print;
  #b {.hello = `Squarepants`} toString print

============
EXIT CODE
============
0

============
STDOUT
============
Spongebob
Squarepants

============
STDERR
============
