tests/snapshots/test_runner__tests__compiler__transpile__pattern_matching_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let and = (x: Boolean, y: Boolean): Boolean =>
  switch ({ x, y }) {
    case {x: true, y: true}: true
    case _: false
  }


do true.and(true).print()
do true.and(false).print()
do false.and(true).print()
do false.and(false).print()

============
EXIT CODE
============
0

============
STDOUT
============
true
false
false
false

============
STDERR
============
