tests/snapshots/test_runner__tests__compiler__transpile__pattern_matching_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
enum Bool = True False
let and = | x y =>
  let True = x
  let True = y
  True

do True.and(True).print()
do True.and(False).print()
do False.and(True).print()
do False.and(False).print()

============
EXIT CODE
============
0

============
STDOUT
============
{ '$': 'True', _: null }
{ '$': 'False', _: null }
{ '$': 'False', _: null }
{ '$': 'False', _: null }

============
STDERR
============
