tests/snapshots/test_runner__tests__compiler__transpile__pattern_matching_3.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
// Using Javascript's keyword as property name should not fail

do {
  let foo = { class } => class;
  { class: "Hello" }.foo().print()
}

============
EXIT CODE
============
0

============
STDOUT
============
Hello

============
STDERR
============
